# oocmap

./: .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  db.cpp  db.h  dev-requirements.txt  errors.cpp  errors.h  lazydict.cpp  lazydict.h  lazylist.cpp  lazylist.h  lazytuple.cpp  lazytuple.h  lmdb.h  mdb.c  module.cpp  module.h  oocmap.cpp  oocmap.h  oocmap.py  oocmap_test.py  requirements.txt  setup.py  spooky.cpp  spooky.h
.github/workflows/: changelog.yml  main.yml
c/: CMakeLists.txt  db.cpp  db.h  errors.cpp  errors.h  lazydict.cpp  lazydict.h  lazylist.cpp  lazylist.h  lazytuple.cpp  lazytuple.h  module.cpp  oocmap.c  oocmap.cpp  oocmap.h  oocmap_test.py  setup.py
c/speedtest/: RESULTS.md  speedtest.py
scripts/: prepare_changelog.py  release.sh  release_notes.py  version.py
speedtest/: speedtest.py
